<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="110dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="365dp"
                android:layout_height="57dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/etTitrePrixProduit"
                tools:text="Calcul d'un prix d'achat d'un produit hors taxe et toute taxe comprise" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="204dp"
                    android:layout_height="33dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/etPrix"
                    android:textSize="12sp"
                    tools:text="Prix du produit(DH)" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/editTextNumberDecimal2"
                        android:layout_width="158dp"
                        android:layout_height="33dp"
                        android:inputType="numberDecimal"
                        android:textSize="12sp"
                        tools:ignore="MissingConstraints" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="216dp"
                    android:layout_height="41dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/etNombreProduit"
                    android:textSize="12sp"
                    tools:text="Nombre de produit commandé" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="141dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:ems="10"
                        android:inputType="number"
                        android:textSize="12sp"
                        tools:ignore="MissingConstraints" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="48dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/etTVA"
                    android:textSize="12sp"
                    tools:text="TVA(%)" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="22"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <EditText
                        android:id="@+id/editTextNumberDecimal"
                        android:layout_width="291dp"
                        android:layout_height="34dp"
                        android:inputType="numberDecimal"
                        android:textSize="12sp"
                        tools:ignore="MissingConstraints" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginRight="80dp"
                    android:background="@color/black"
                    android:text="@string/buttonPrixTotal"
                    android:textColor="#0B0A0A"
                    android:textSize="12sp"
                    app:backgroundTint="#A8A7A7"
                    app:iconPadding="30dp"
                    tools:text="PRIX TOTAL" />


                <Button
                    android:id="@+id/button2"
                    android:layout_width="107dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/black"
                    android:text="@string/buttonAnnuler"
                    android:textColor="#0C0C0C"
                    android:textSize="12sp"
                    app:backgroundTint="#A8A7A7"
                    tools:text="ANNULER" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="129dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/etResultatPrixHT"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.074"
                    app:layout_constraintVertical_bias="0.53"
                    tools:text="Prix hors taxe(DH)" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="95dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginLeft="125dp"

                    android:layout_marginTop="50dp"
                    android:text="@string/prixHT"
                    android:textSize="12sp"
                    tools:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="244dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/etResultatPrixTTC"
                    android:textSize="12sp"
                    tools:text="Prix Toute Taxe Comprise(DH)" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="95dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/prixTTC"
                    android:textSize="12sp"
                    tools:text="0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>